tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/incomplete-hex.stderr
TOML parse error at line 1, column 20
  |
1 | incomplete-hex = 0x
  |                    ^
invalid hexadecimal integer
